feat: index - perfil section

--- a/scss/components/_component-header.scss
+++ b/scss/components/_component-header.scss
@@ -29,6 +29,7 @@ header {
       height: fit-content;
 
       a {
+        font-size: 1.125rem ;
         font-weight: var(--semibold);
         letter-spacing: -0.03rem;
       }
