--- a/scss/global/_variables.scss
+++ b/scss/global/_variables.scss
@@ -25,7 +25,10 @@
   //ESPAÇAMENTO ================================
   // // PADDIND-TOP -> FIXED HEADER 
   --section_top-spacing: 4.5rem + 1px;
+  
+  // // ESPAÇAMENTO ENTRE SEÇÕES
+  --sections-margin: 4.5rem;
 
-  // // SEPARA O TITULO DO CONTEUDO DAS SEÇÕES
-  --section-title_spacing: 2.75rem;
+  // // // SEPARA O TITULO DO CONTEUDO DAS SEÇÕES
+  // --section-title_spacing: 2.75rem;
 }
