--- a/scss/global/_base.scss
+++ b/scss/global/_base.scss
@@ -40,7 +40,7 @@ a {
     width: 1rem;
     height: 1rem;
     background: var(--wireframe-300);
-    margin-left: .5rem;
+    margin-left: .8rem;
   }
 
   &.--cor-primaria {
@@ -65,4 +65,23 @@ a {
   //esconde labels de botões - questão de acessibilidade
   position: absolute;
   left: -999999px;
+}
+
+footer {
+  background: var(--wireframe-100);
+  padding: 1.25rem 0;
+
+  * {
+    color: var(--wireframe-400);
+    font-size: .75rem;
+    line-height: 1.7;
+  }
+
+  p {
+    text-align: center;
+
+    a {
+      display: inline-block;
+    }
+  }
 }
