feat: página do público e início do dashboard

--- a/scss/global/_variables.scss
+++ b/scss/global/_variables.scss
@@ -21,6 +21,7 @@
 
   //BORDA ================================
   --borda: .125rem;
+  --borda-m: .25rem;
 
   //ESPAÇAMENTO ================================
   // // PADDIND-TOP -> FIXED HEADER 
