--- a/scss/global/_base.scss
+++ b/scss/global/_base.scss
@@ -12,7 +12,7 @@ a {
 }
 
 .container {
-  padding: 0 1.25rem;
+  padding: 0 1.5rem;
   display: flex;
 }
 
@@ -68,6 +68,7 @@ a {
 }
 
 footer {
+  margin-top: 4.5rem;
   background: var(--wireframe-100);
   padding: 1.25rem 0;
 
