--- a/scss/components/_component-header.scss
+++ b/scss/components/_component-header.scss
@@ -31,6 +31,7 @@ header {
       a {
         font-size: 1.125rem ;
         font-weight: var(--semibold);
+        color: var(--wireframe-600);
         letter-spacing: -0.03rem;
       }
     }
