--- a/scss/pages/calendario.scss
+++ b/scss/pages/calendario.scss
@@ -2,6 +2,7 @@
 @import "../components/component-header";
 @import "../components/component-breadcrumb";
 @import "../components/component-dashboard-nav";
+@import "../components/component-dashboard-filtro";
 
 main {
   padding-top: calc(1.8rem + var(--section_top-spacing));
@@ -13,68 +14,6 @@ main {
 
   .main-container {
     flex-direction: column;
-  }
-
-  #section-filtro__mobile {
-    margin-top: 2rem;
-    border-radius: var(--borda-m);
-    border: 1px solid var(--wireframe-100);
-
-    #toggle-filtro {
-      width: 100%;
-      padding: 1rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-
-      &::after {
-        content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="11" height="8" viewBox="0 0 11 8" fill="none"><path d="M5.48481 6.94073L0.929896 2.38579C0.710217 2.16611 0.710217 1.80996 0.929896 1.5903L1.46115 1.05904C1.68046 0.839737 2.03589 0.839315 2.25571 1.0581L5.88257 4.66797L9.50941 1.0581C9.72923 0.839315 10.0847 0.839737 10.304 1.05904L10.8352 1.5903C11.0549 1.80998 11.0549 2.16614 10.8352 2.38579L6.28033 6.94073C6.06065 7.16039 5.70449 7.16039 5.48481 6.94073Z" fill="%23828282"/></svg>');
-      }
-    }
-
-    #listas-filtro {
-      padding: 0;
-      visibility: hidden;
-      opacity: 0;
-      height: 0;
-      transition: .3s opacity linear;
-
-      .listas-label-input {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 1.375rem;
-
-        &:last-child {
-          margin-bottom: 2.5rem;
-        }
-
-        label {
-          display: block;
-          font-size: .875rem;
-          font-weight: 500;
-          letter-spacing: .0175rem;
-          margin-bottom: .75rem;
-        }
-      }
-
-      #filtro-limpa {
-        padding: .5rem .75rem;
-        border-radius: var(--borda);
-        background: rgba(224, 224, 224, 0.50);
-        font-size: .875rem;
-        letter-spacing: .00875rem;
-      }
-    }
-
-    &.filtro--ativo {
-      #listas-filtro {
-        padding: .5rem 1rem 1.25rem;
-        visibility: visible;
-        opacity: 1;
-        height: auto;
-        transition: .3s opacity linear;
-      }
-    }
   }
 }
 
