fix: small fixes

--- a/scss/global/_variables.scss
+++ b/scss/global/_variables.scss
@@ -2,7 +2,7 @@
   //TIPOGRAFIA ================================
   @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
 
-  --font-sans: 'Metropolis', 'sans-serif';
+  --font-sans: 'Open Sans', sans-serif;
 
   --bold: 700;
   --semibold: 600;
