--- a/scss/components/_component-dashboard-nav.scss
+++ b/scss/components/_component-dashboard-nav.scss
@@ -5,8 +5,9 @@
     display: flex;
     align-items: center;
     overflow: auto;
-    padding-bottom: 1rem;
-    padding-right: 1.5rem;
+    padding: .25rem 1.5rem 1rem 0;
+    // padding-bottom: 1rem;
+    // padding-right: 1.5rem;
 
     li {
       &:not(:last-child) {
