--- a/scss/components/_component-header.scss
+++ b/scss/components/_component-header.scss
@@ -29,7 +29,7 @@ header {
       height: fit-content;
 
       a {
-        font-size: 1.125rem ;
+        font-size: 1.125rem;
         font-weight: var(--semibold);
         color: var(--wireframe-600);
         letter-spacing: -0.03rem;
@@ -41,6 +41,7 @@ header {
       height: 2.5rem;
 
       div {
+
         &,
         &::before,
         &::after {
@@ -80,17 +81,18 @@ header {
       right: -15rem;
       background: var(--wireframe-000);
       padding: 3rem 1.25rem;
+      visibility: hidden;
       transition: .3s right ease-in-out;
 
       #internal-nav {
         display: flex;
         flex-direction: column;
-        
+
         li {
           &:not(:last-child) {
             margin-bottom: 1.375rem;
           }
-          
+
           a {
             display: block;
             padding: .5rem 0;
@@ -122,6 +124,7 @@ header {
       }
 
       #header-nav {
+        visibility: visible;
         right: 0;
         transition: .3s right ease-in-out;
       }
