--- a/scss/global/_base.scss
+++ b/scss/global/_base.scss
@@ -14,6 +14,12 @@ a {
 .container {
   padding: 0 1.5rem;
   display: flex;
+
+  @media only screen and (min-width: 36rem) {
+    padding: 0;
+    max-width: 34rem;
+    margin: 0 auto;
+  }
 }
 
 .btn-primario,
@@ -80,12 +86,14 @@ a {
   }
 }
 
-
-
 footer {
   margin-top: 4.5rem;
   background: var(--wireframe-100);
   padding: 1.25rem 0;
+
+  .container {
+    justify-content: center;
+  }
 
   * {
     color: var(--wireframe-400);
