--- a/scss/pages/sobre.scss
+++ b/scss/pages/sobre.scss
@@ -18,8 +18,8 @@ article {
 
   .container {
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    // align-items: center;
+    // justify-content: center;
 
     h2 {
       margin-bottom: 1.25rem;
