--- a/scss/components/_component-header.scss
+++ b/scss/components/_component-header.scss
@@ -95,8 +95,57 @@ header {
 
           a {
             display: block;
-            padding: .5rem 0;
+            padding: .5rem;
             color: var(--wireframe-500);
+          }
+        }
+
+        #publico-nav {
+          border-radius: var(--borda);
+          overflow: hidden;
+          &-button {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            &::after {
+              margin-right: .5rem;
+              content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="11" height="8" viewBox="0 0 11 8" fill="none"><path d="M5.48481 6.94073L0.929896 2.38579C0.710217 2.16611 0.710217 1.80996 0.929896 1.5903L1.46115 1.05904C1.68046 0.839737 2.03589 0.839315 2.25571 1.0581L5.88257 4.66797L9.50941 1.0581C9.72923 0.839315 10.0847 0.839737 10.304 1.05904L10.8352 1.5903C11.0549 1.80998 11.0549 2.16614 10.8352 2.38579L6.28033 6.94073C6.06065 7.16039 5.70449 7.16039 5.48481 6.94073Z" fill="%23828282"/></svg>');
+            }
+          }
+
+          &-lista {
+            background: rgba($color: #e0e0e0, $alpha: .25);
+            font-size: .875rem;
+            padding: 0;
+            height: 0;
+            visibility: hidden;
+            opacity: 0;
+            transition: .3s opacity linear;
+
+            li {
+              &:not(:last-child) {
+                margin-bottom: .5rem;
+              }
+            }
+          }
+
+          &.--publico-nav--ativo {
+            #publico-nav-button {
+              background: rgba($color: #e0e0e0, $alpha: .45);
+
+              &::after {
+                transform: rotate(180deg);
+              }
+            }
+
+            #publico-nav-lista {
+              padding: .25rem .6rem;
+              height: auto;
+              visibility: visible;
+              opacity: 1;
+              transition: .3s opacity linear;
+            }
           }
         }
       }
