fix: small css fixes

--- a/scss/pages/publico.scss
+++ b/scss/pages/publico.scss
@@ -23,6 +23,8 @@ section {
       justify-content: center;
 
       li {
+        width: 100%;
+        
         &:not(:last-child) {
           margin-bottom: 1.5rem;
         }
