--- a/scss/pages/calendario.scss
+++ b/scss/pages/calendario.scss
@@ -115,3 +115,16 @@ main {
     }
   }
 }
+
+@media only screen and (min-width: 48rem) {
+  #section-eventos .container .evento-lista {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    .evento-item {
+      width: 21rem;
+    }
+  }
+}
