--- a/scss/global/_base.scss
+++ b/scss/global/_base.scss
@@ -25,9 +25,9 @@ a {
     max-width: 44rem;
   }
 
-  //   @media only screen and (min-width: 64rem) {
-  //   max-width: 58.5rem;
-  // }
+  @media only screen and (min-width: 64rem) {
+    max-width: 58.5rem;
+  }
 
   // @media only screen and (min-width: 80rem) {
   //   max-width: 70rem;
