--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -46,10 +46,22 @@
 
   .container {
     flex-direction: column;
-  }
 
-  &-image__desktop {
-    display: none;
+    @media only screen and (min-width: 64rem) {
+      flex-direction: row;
+
+      .index-section-image {
+        width: 50%;
+        margin-bottom: 0;
+        margin-right: 1.5rem;
+
+        &.sobre {
+          order: 2;
+          margin-left: 1.5rem;
+          margin-right: 0;
+        }
+      }
+    }
   }
 
   &-image {
@@ -72,6 +84,7 @@
       color: var(--wireframe-000);
     }
   }
+
 
 }
 
@@ -167,6 +180,32 @@
         a:last-child {
           margin-top: 0;
           margin-left: 1.125rem;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 64rem) {
+  .section-perfil .container .perfil-lista {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    // align-items: center;
+
+    .perfil-item {
+      width: 18.8rem;
+      // height: 30rem;
+
+      &:not(:last-child) {
+        margin-bottom: 0;
+      }
+
+      &:nth-child(2) {
+        .perfil-item-info {
+          p {
+            margin-bottom: calc(1.5rem + 24.5px); //GAMBIARRA
+          }
         }
       }
     }
