--- a/scss/pages/publico.scss
+++ b/scss/pages/publico.scss
@@ -25,7 +25,7 @@ section {
 
       li {
         width: 100%;
-        
+
         &:not(:last-child) {
           margin-bottom: 1.5rem;
         }
@@ -56,4 +56,11 @@ section {
       width: 21rem;
     }
   }
+}
+
+@media only screen and (min-width: 64rem) {
+  section .container .perfil-links li {
+    width: 48.5%;
+  }
+
 }
