--- a/scss/components/_component-dashboard-filtro.scss
+++ b/scss/components/_component-dashboard-filtro.scss
@@ -1,4 +1,5 @@
-.filtro-select-div, .filtro-search-div {
+.filtro-select-div,
+.filtro-search-div {
   display: flex;
   border-radius: var(--borda-m);
   border: 1px solid var(--wireframe-100);
@@ -10,11 +11,12 @@
   &:focus-within {
     border-color: var(--wireframe-300);
   }
-  
-  .filtro-select, .filtro-input {
-    -moz-appearance:none; 
-    -webkit-appearance:none; 
-    appearance:none;
+
+  .filtro-select,
+  .filtro-input {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
     padding: .75rem 0 .75rem 1rem;
     width: calc(100% - .875rem);
     font-size: 1rem;
@@ -38,7 +40,7 @@
   border-radius: var(--borda-m);
   border: 1px solid var(--wireframe-100);
 
-  @media only screen and (min-width: 64rem)  {
+  @media only screen and (min-width: 64rem) {
     width: 60%;
   }
 
@@ -99,6 +101,39 @@
       opacity: 1;
       height: auto;
       transition: .3s opacity linear;
+    }
+  }
+}
+
+@media only screen and (min-width: 80rem) {
+  #section-filtro__mobile {
+    width: 100%;
+    border: none;
+
+    #toggle-filtro {
+      display: none;
+    }
+
+    #listas-filtro {
+      visibility: visible;
+      opacity: 1;
+      height: auto;
+      transition: none;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+
+      .listas-label-input {
+        width: 100%;
+        margin-bottom: 0;
+        margin-right: 1.375rem;
+      }
+
+      #filtro-limpa {
+        min-width: 8rem;
+        align-self: flex-end;
+        margin-left: 5rem;
+      }
     }
   }
 }
