--- a/scss/components/_component-dashboard-nav.scss
+++ b/scss/components/_component-dashboard-nav.scss
@@ -1,43 +1,97 @@
-#estatisticas-nav__mobile {
-  max-width: 100%;
-
-  ul {
+.nav-container {
+  a {
     display: flex;
     align-items: center;
-    overflow: auto;
-    padding: .25rem 1.5rem 1rem 0;
+    padding: .75rem 1.5rem;
+    background: var(--wireframe-200);
+    color: var(--wireframe-500);
+    border-radius: var(--borda-m);
+    white-space: nowrap;
 
-    li {
-      &:not(:last-child) {
-        margin-right: 1.4rem;
+    &.nav--ativo {
+      background: var(--wireframe-400);
+      color: var(--wireframe-000);
+
+      svg path {
+        fill: var(--wireframe-200);
       }
+    }
 
-      a {
+    div {
+      margin-right: .5rem;
+      height: 16px;
+      width: 16px;
+
+      svg {
+        height: 100%;
+        width: 100%;
+      }
+    }
+  }
+
+  &-mobile {
+    padding-right: 0;
+    margin-bottom: 2.75rem;
+
+    @media only screen and (min-width: 80rem) {
+      display: none;
+    }
+
+    #estatisticas-nav__mobile {
+      max-width: 100%;
+
+      ul {
         display: flex;
         align-items: center;
-        padding: .75rem 1.5rem;
-        background: var(--wireframe-200);
-        color: var(--wireframe-500);
-        border-radius: var(--borda-m);
-        white-space: nowrap;
+        overflow: auto;
+        padding: .25rem 1.5rem 1rem 0;
 
-        &.nav--ativo {
-          background: var(--wireframe-400);
-          color: var(--wireframe-000);
-
-          svg path {
-            fill: var(--wireframe-200);
+        li {
+          &:not(:last-child) {
+            margin-right: 1.4rem;
           }
         }
+      }
+    }
+  }
 
-        div {
-          margin-right: .5rem;
-          height: 16px;
-          width: 16px;
+  &-desktop {
+    display: none;
+    margin: 0;
+    max-width: 16rem;
+    position: fixed;
+    height: 100vh;
+    background: var(--wireframe-100);
+    padding: 0 1.25rem;
 
-          svg {
-            height: 100%;
-            width: 100%;
+    @media only screen and (min-width: 80rem) {
+      display: block;
+    }
+
+    #estatisticas-nav__desktop {
+      position: sticky;
+      top: 6rem;
+
+      ul {
+        li {
+          &:not(:last-child) {
+            margin-bottom: 1.375rem;
+          }
+
+          a {
+            background: none;
+            font-size: .875rem;
+            color: var(--wireframe-500);
+
+            svg path {
+              fill: var(--wireframe-300);
+            }
+
+            &.nav--ativo {
+              background: rgba(189, 189, 189, 0.60);
+              color: var(--wireframe-600);
+              font-weight: var(--medium);
+            }
           }
         }
       }
