--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -49,6 +49,7 @@
 
     @media only screen and (min-width: 64rem) {
       flex-direction: row;
+      align-items: center;
 
       .index-section-image {
         width: 50%;
@@ -56,6 +57,7 @@
         margin-right: 1.5rem;
 
         &.sobre {
+          width: 45%;
           order: 2;
           margin-left: 1.5rem;
           margin-right: 0;
@@ -209,5 +211,11 @@
         }
       }
     }
+  }
+}
+
+@media only screen and (min-width: 64rem) {
+  .perfil-item {
+    width: 22.5rem !important;
   }
 }
