--- a/scss/components/_component-header.scss
+++ b/scss/components/_component-header.scss
@@ -27,6 +27,7 @@ header {
 
     .logo-container {
       height: fit-content;
+      width: 16rem;
 
       a {
         font-size: 1.125rem;
@@ -120,7 +121,7 @@ header {
             justify-content: space-between;
 
             &::after {
-              margin-right: .5rem;
+              margin-left: .8rem;
               content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="11" height="8" viewBox="0 0 11 8" fill="none"><path d="M5.48481 6.94073L0.929896 2.38579C0.710217 2.16611 0.710217 1.80996 0.929896 1.5903L1.46115 1.05904C1.68046 0.839737 2.03589 0.839315 2.25571 1.0581L5.88257 4.66797L9.50941 1.0581C9.72923 0.839315 10.0847 0.839737 10.304 1.05904L10.8352 1.5903C11.0549 1.80998 11.0549 2.16614 10.8352 2.38579L6.28033 6.94073C6.06065 7.16039 5.70449 7.16039 5.48481 6.94073Z" fill="%23828282"/></svg>');
             }
           }
@@ -160,6 +161,50 @@ header {
           }
         }
       }
+
+      #user-nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 2.5rem;
+
+        #user-notificacao {
+          padding: .625rem;
+          &::before {
+            content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="17" height="18" viewBox="0 0 17 18" fill="none"><path d="M8.76515 18C10.0069 18 11.0141 16.9928 11.0141 15.75H6.51621C6.51621 16.9928 7.52344 18 8.76515 18ZM16.3375 12.7368C15.6582 12.0069 14.3873 10.909 14.3873 7.3125C14.3873 4.58086 12.472 2.39414 9.88945 1.85766V1.125C9.88945 0.503789 9.38601 0 8.76515 0C8.1443 0 7.64086 0.503789 7.64086 1.125V1.85766C5.05828 2.39414 3.14297 4.58086 3.14297 7.3125C3.14297 10.909 1.87207 12.0069 1.19286 12.7368C0.981919 12.9635 0.888403 13.2346 0.890161 13.5C0.894028 14.0766 1.34649 14.625 2.01868 14.625H15.5116C16.1838 14.625 16.6366 14.0766 16.6401 13.5C16.6419 13.2346 16.5484 12.9632 16.3375 12.7368Z" fill="%23828282"/></svg>');
+          }
+        }
+
+        #user-faq {
+          padding: .625rem;
+
+          &::before {
+            content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9.76514 18C14.7357 18 18.7651 13.9706 18.7651 9C18.7651 4.02944 14.7357 0 9.76514 0C4.79457 0 0.765137 4.02944 0.765137 9C0.765137 13.9706 4.79457 18 9.76514 18ZM8.79329 11.0853V11.2302H10.4083V11.0853C10.4112 10.8069 10.4467 10.5725 10.5149 10.3822C10.5859 10.1919 10.6924 10.0242 10.8345 9.87936C10.9794 9.73447 11.164 9.59527 11.3885 9.46175C11.6555 9.30265 11.887 9.1251 12.0831 8.92908C12.2791 8.73021 12.4311 8.50294 12.539 8.24726C12.6498 7.98873 12.7052 7.69328 12.7052 7.36089C12.7052 6.86373 12.5816 6.43902 12.3345 6.08675C12.0873 5.73447 11.7464 5.46601 11.3118 5.28135C10.8771 5.09385 10.3771 5.0001 9.81175 5.0001C9.29755 5.0001 8.82738 5.09243 8.40124 5.27709C7.9751 5.4589 7.63277 5.73589 7.37425 6.10805C7.11573 6.47737 6.97937 6.94612 6.96516 7.5143H8.7038C8.71232 7.28135 8.76914 7.08675 8.87425 6.9305C8.97937 6.7714 9.11431 6.65209 9.27908 6.57254C9.44385 6.49015 9.61857 6.44896 9.80323 6.44896C9.99357 6.44896 10.1669 6.48873 10.3231 6.56828C10.4822 6.64783 10.6086 6.76146 10.7024 6.90919C10.7961 7.05692 10.843 7.22879 10.843 7.42481C10.843 7.60947 10.8018 7.77709 10.7194 7.92766C10.637 8.07538 10.5262 8.21033 10.387 8.33248C10.2478 8.45464 10.0902 8.57254 9.91403 8.68618C9.67823 8.83391 9.47653 8.99868 9.30891 9.1805C9.1413 9.36231 9.01346 9.60095 8.92539 9.89641C8.84016 10.1919 8.79613 10.5882 8.79329 11.0853ZM8.90834 13.6592C9.11005 13.8581 9.35295 13.9575 9.63704 13.9575C9.81886 13.9575 9.98647 13.912 10.1399 13.8211C10.2933 13.7274 10.4169 13.6038 10.5106 13.4504C10.6072 13.2941 10.6569 13.1223 10.6598 12.9348C10.6569 12.6563 10.5532 12.4177 10.3487 12.2188C10.1441 12.02 9.90692 11.9206 9.63704 11.9206C9.35295 11.9206 9.11005 12.02 8.90834 12.2188C8.70948 12.4177 8.61147 12.6563 8.61431 12.9348C8.61147 13.216 8.70948 13.4575 8.90834 13.6592Z" fill="%23828282"/></svg>');
+          }
+        }
+
+        #user-select {
+          display: flex;
+          align-items: center;
+          padding: .5rem .75rem;
+          border-radius: var(--borda-m);
+          border: 1px solid var(--wireframe-200);
+          font-size: .75rem;
+          font-weight: var(--semibold);
+          color: var(--wireframe-400);
+          text-transform: uppercase;
+
+          &::before {
+            margin-right: .5rem;
+            content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18" fill="none"><g clip-path="url(%23clip0_528_1931)"><path d="M9.48389 0.28125C4.66748 0.28125 0.765137 4.18359 0.765137 9C0.765137 13.8164 4.66748 17.7188 9.48389 17.7188C14.3003 17.7188 18.2026 13.8164 18.2026 9C18.2026 4.18359 14.3003 0.28125 9.48389 0.28125ZM9.48389 3.65625C11.1925 3.65625 12.5776 5.04141 12.5776 6.75C12.5776 8.45859 11.1925 9.84375 9.48389 9.84375C7.77529 9.84375 6.39014 8.45859 6.39014 6.75C6.39014 5.04141 7.77529 3.65625 9.48389 3.65625ZM9.48389 15.75C7.42021 15.75 5.571 14.8148 4.3335 13.3523C4.99443 12.1078 6.28818 11.25 7.79639 11.25C7.88076 11.25 7.96514 11.2641 8.046 11.2887C8.50303 11.4363 8.98115 11.5312 9.48389 11.5312C9.98662 11.5312 10.4683 11.4363 10.9218 11.2887C11.0026 11.2641 11.087 11.25 11.1714 11.25C12.6796 11.25 13.9733 12.1078 14.6343 13.3523C13.3968 14.8148 11.5476 15.75 9.48389 15.75Z" fill="%23828282"/></g><defs><clipPath id="clip0_528_1931"><rect width="18" height="18" fill="white" transform="translate(0.765137)"/></clipPath></defs></svg>');
+          }
+
+          &::after {
+            margin-left: .5rem;
+            content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="11" height="8" viewBox="0 0 11 8" fill="none"><path d="M5.48481 6.94073L0.929896 2.38579C0.710217 2.16611 0.710217 1.80996 0.929896 1.5903L1.46115 1.05904C1.68046 0.839737 2.03589 0.839315 2.25571 1.0581L5.88257 4.66797L9.50941 1.0581C9.72923 0.839315 10.0847 0.839737 10.304 1.05904L10.8352 1.5903C11.0549 1.80998 11.0549 2.16614 10.8352 2.38579L6.28033 6.94073C6.06065 7.16039 5.70449 7.16039 5.48481 6.94073Z" fill="%23828282"/></svg>');
+          }
+        }
+      }
     }
   }
 
@@ -187,6 +232,92 @@ header {
         visibility: visible;
         right: 0;
         transition: .3s right ease-in-out;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 80rem) {
+  header .header-container {
+
+    #menu {
+      display: none;
+    }
+
+    #header-nav {
+      position: static;
+      background: none;
+      height: auto;
+      width: 100%;
+      padding: 0;
+      visibility: visible;
+      opacity: 1;
+      margin-left: 1.75rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      #internal-nav {
+        flex-direction: row;
+
+        li {
+          &:not(:last-child) {
+            margin-bottom: 0;
+            margin-right: 2rem;
+          }
+
+          a {
+            padding: .5rem 0;
+            width: 100%;
+            color: var(--wireframe-400);
+
+            &:hover {
+              color: var(--wireframe-600);
+            }
+          }
+        }
+
+        #publico-nav {
+          position: relative;
+          overflow: visible;
+
+          &-button {
+            width: fit-content;
+          }
+
+          &-lista {
+            position: absolute;
+            left: -1rem;
+            height: auto;
+            width: 11.25rem;
+            visibility: hidden;
+            opacity: 0;
+            background: var(--wireframe-000);
+            border: 1px solid var(--wireframe-200);
+            border-radius: var(--borda);
+            padding: .75rem;
+            z-index: inherit;
+
+            a:hover {
+              font-weight: var(--medium);
+            }
+          }
+
+          &:hover {
+            #publico-nav-lista {
+              visibility: visible;
+              opacity: 1;
+            }
+          }
+        }
+      }
+
+      #user-nav {
+        margin-top: 0;
+
+        #user-faq {
+          margin: 0 1.75rem 0 .75rem;
+        }
       }
     }
   }
