--- a/scss/global/_type.scss
+++ b/scss/global/_type.scss
@@ -3,6 +3,14 @@
   font-weight: var(--bold);
   line-height: 1.2;
   letter-spacing: -0.0225rem;
+
+  @media only screen and (min-width: 48rem) {
+    font-size: 2.8rem;
+  }
+
+  @media only screen and (min-width: 80rem) {
+    font-size: 3.2rem;
+  }
 }
 
 h1 {
@@ -49,4 +57,3 @@ p {
   font-weight: var(--regular);
   line-height: 1.75;
 }
-
