--- a/scss/pages/publico.scss
+++ b/scss/pages/publico.scss
@@ -62,5 +62,22 @@ section {
   section .container .perfil-links li {
     width: 48.5%;
   }
+}
 
+@media only screen and (min-width: 80rem) {
+  section .container .perfil-links {
+    &::after {
+      content: "";
+      flex: auto;
+    }
+
+    li {
+      width: 22.35rem;
+
+      &:last-child {
+        margin-bottom: 1.5rem;
+        margin-left: 1.5rem;
+      }
+    }
+  }
 }
