--- a/scss/global/_type.scss
+++ b/scss/global/_type.scss
@@ -9,7 +9,7 @@
   }
 
   @media only screen and (min-width: 80rem) {
-    font-size: 3.2rem;
+    font-size: 3.25rem;
   }
 }
 
@@ -56,4 +56,34 @@ p {
   font-size: .875rem;
   font-weight: var(--regular);
   line-height: 1.75;
+}
+
+@media only screen and (min-width: 86rem) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.375rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  .dashboard-title {
+    font-size: 1.25rem;
+  }
+
+  .texto-lg {
+    font-size: 1.125rem;
+  }
+
+  .texto-sm {
+    font-size: .875rem;
+  }
 }
