--- a/scss/pages/estatisticas.scss
+++ b/scss/pages/estatisticas.scss
@@ -11,10 +11,6 @@ main {
   .main-container {
     flex-direction: column;
   }
-
-  // @media only screen and (min-width: 80rem) {
-  //   padding-top: 0;
-  // }
 }
 
 .resultado-box-mapa {
@@ -85,6 +81,10 @@ main {
           width: 100%;
           height: 19rem;
           background: var(--wireframe-200);
+
+          @media only screen and (min-width: 86rem) {
+            height: 22rem;
+          }
         }
       }
     }
@@ -109,6 +109,15 @@ main {
 
         .estatisticas-resultado {
           width: 17rem;
+        }
+
+        @media only screen and (min-width: 86rem) {
+          .estatisticas-mapa {
+            width: calc(100% - 22rem);
+          }
+          .estatisticas-resultado {
+            width: 22rem;
+          }
         }
       }
 
