feat: graficos chartjs

--- a/scss/pages/estatisticas.scss
+++ b/scss/pages/estatisticas.scss
@@ -56,6 +56,9 @@ main {
     }
 
     &.text-block {
+      canvas {
+        margin: 0 auto;
+      }
       p {
         font-size: .875rem;
       }
