--- a/scss/pages/publico.scss
+++ b/scss/pages/publico.scss
@@ -15,6 +15,7 @@ section {
       font-size: 1.3rem;
       margin-bottom: 2.75rem;
       max-width: 34rem;
+      color: var(--visual-800, --wireframe-600);
     }
 
     .perfil-links {
@@ -33,12 +34,12 @@ section {
         a {
           width: 100%;
           height: 13.5rem;
-          background-color: var(--wireframe-100);
+          background-color: #d2dbef;
           border-radius: var(--borda);
           padding: 2rem 1.5rem;
           display: flex;
           align-items: flex-end;
-          color: var(--wireframe-500);
+          color: var(--visual-800, --wireframe-500);
         }
       }
     }
