--- a/scss/pages/sobre.scss
+++ b/scss/pages/sobre.scss
@@ -21,6 +21,12 @@ article {
 
     h2 {
       margin-bottom: 1.25rem;
+      color: var(--visual-800);
+    }
+
+    p {
+      color: var(--visual-800);
+      
     }
 
     p:not(:last-child) {
