--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -79,6 +79,11 @@
   &-image {
     margin-bottom: 2.75rem;
 
+    @media only screen and (min-width: 48rem) {
+      height: 20rem;
+      object-fit: cover;
+    }
+
     @media only screen and (min-width: 80rem) {
       margin-right: 2rem !important;
     }
